Update InMemoryHistoryManager.java